Implement Question Entity