@@ -1,9 +1,13 @@
 package com.upc.viksadventuresapi.quiz.domain.model.valueobjects;
 
 public record QuestionText(String questionText) {
+    public QuestionText() {
+        this(null);
+    }
+
     public QuestionText {
-        if (questionText == null || questionText.trim().isEmpty()) {
-            throw new IllegalArgumentException("Question text cannot be null or empty");
+        if (questionText == null || questionText.isBlank()) {
+            throw new IllegalArgumentException("Title cannot be null or blank");
         }
     }
 }
